Bug 149093 - "Start at" value in bullets and numbering is not taken over
Summary: "Start at" value in bullets and numbering is not taken over
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-05-15 07:59 UTC by Gustav Wall
Modified: 2022-05-17 19:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By: Caolán McNamara


Attachments
Example screenshot "bullets and numberuing" dialog (53.26 KB, image/png)
2022-05-15 08:02 UTC, Gustav Wall
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gustav Wall 2022-05-15 07:59:33 UTC
Description:
If I "Start at" simply enter the number "N" and press OK, then the value "N" is not taken over. 

Steps to Reproduce:
1.I enter in "bullets and numbering" for "Start at" the value N (e.g 8)
2.press OK


Actual Results:
value "N" is not taken over

Expected Results:
value "N" is taken over


Reproducible: Always


User Profile Reset: No



Additional Info:
If I enter the value by pressing "+" and press OK, then the value "Start at" is taken over correctly.
Comment 1 Gustav Wall 2022-05-15 08:02:05 UTC
Created attachment 180124 [details]
Example screenshot "bullets and numberuing" dialog
Comment 2 sdc.blanco 2022-05-15 11:01:30 UTC
Do not reproduce in Impress (or Writer) with:

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4ea44fdb19e568093ab1e0549c3ffa33296a486b
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: da-DK (da_DK); UI: en-US
Calc: CL
Comment 3 sdc.blanco 2022-05-15 11:12:22 UTC
Do not reproduce in Impress with:

Version: 7.2.6.2 (x64) / LibreOffice Community
Build ID: b0ec3a565991f7569a5a7f5d24fed7f52653d754
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: da-DK (da_DK); UI: en-US
Calc: threaded
Comment 4 Gustav Wall 2022-05-15 11:22:10 UTC
DISTRIB_ID=Ubuntu
DISTRIB_RELEASE=22.04
DISTRIB_CODENAME=jammy
DISTRIB_DESCRIPTION="Ubuntu 22.04 LTS"
Comment 5 Timur 2022-05-16 14:04:58 UTC
No repro 6.1, repro 6.2 and 7.4+ in Linux GTK3. Not in Windows.
Comment 6 raal 2022-05-16 17:15:00 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara Could you possibly take a look at this one?
Thanks
 4d665ab9eb625b71a26cf29f6d261a18cf9c79b6 is the first bad commit
commit 4d665ab9eb625b71a26cf29f6d261a18cf9c79b6
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Oct 3 18:33:28 2018 +0200

    source 42e5319342f436f43ada228818d928cc8fd01d5b

https://git.libreoffice.org/core/+/42e5319342f436f43ada228818d928cc8fd01d5b
Comment 7 Caolán McNamara 2022-05-16 19:50:18 UTC
we're listening to when the text changes and querying the value, but the value wasn't been set from the changed text yet so we get the old value if we do that
Comment 8 Commit Notification 2022-05-17 07:54:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9969b7ee3413b4c83f6e93d92e1038daeaf649e8

Resolves: tdf#149093 connect_value_change if we will query its value

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2022-05-17 08:16:34 UTC
done in trunk, backport to 7-3 in gerrit
Comment 10 Commit Notification 2022-05-17 19:30:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/26203fd60631a091739cbba7cc7220429e1b9d21

Resolves: tdf#149093 connect_value_change if we will query its value

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.