Resolves: tdf#149093 connect_value_change if we will query its value

and not the text_change which is called before the value is parsed
from the new text

Change-Id: Ib6bd5647139f1b79f299beb42b704b465ddf535c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134368
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>