sd/source/ui/inc/BulletAndPositionDlg.hxx
@@ -124,6 +124,7 @@ class SvxBulletAndPositionDlg : public weld::GenericDialogController
     DECL_LINK(SizeHdl_Impl, weld::MetricSpinButton&, void);
     DECL_LINK(RatioHdl_Impl, weld::Toggleable&, void);
     DECL_LINK(EditModifyHdl_Impl, weld::Entry&, void);
+    DECL_LINK(SpinModifyHdl_Impl, weld::SpinButton&, void);
     DECL_LINK(BulColorHdl_Impl, ColorListBox&, void);
     DECL_LINK(BulRelSizeHdl_Impl, weld::MetricSpinButton&, void);
     DECL_LINK(PreviewInvalidateHdl_Impl, Timer*, void);
